--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "classnames": "^2.2.5",
+    "detect-passive-events": "^1.0.4",
     "dropzone": "^5.1.1",
     "favicons-webpack-plugin": "^0.0.7",
     "jquery": "^3.1.1",
